Removed Kryo and added FST.